# uav-tr-e-journal-repro

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  MANAGERIAL_INSIGHTS_TEMPLATE.md  README.md  REPRODUCIBILITY.md  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: ci.yml
benchmarks/frozen/: README.md
configs/: base.json
configs/overrides/: comm_calibrated_q1.json  main_table_coverage_minimal_A.json  main_table_coverage_minimal_B.json  main_table_journal_core_A.json  main_table_journal_core_B.json  main_table_v2_calibrated.json  main_table_v2_core_A_calibrated.json  main_table_v2_core_B_calibrated.json  main_table_v2_core_calibrated.json  main_table_v3_core_fullseed_A_calibrated.json  main_table_v3_core_fullseed_B_calibrated.json  main_table_v3_k_sensitivity_A_calibrated.json  main_table_v3_k_sensitivity_B_calibrated.json  main_table_v3_robustness_A_calibrated.json  main_table_v3_robustness_B_calibrated.json  (+10 more)
scripts/: audit_journal_readiness.py  build_manuscript_pack.sh  calibrate_comm_profile.py  check_manuscript_pack_consistency.py  generate_github_release_assets.py  generate_journal_core_writing_pack.py  generate_release_note.py  make_paper_tables_v1.sh  make_paper_tables_v2.sh  make_review_pack.sh  merge_sharded_results.py  reviewer_preflight.sh  run_all.ps1  run_journal_v3_robust.sh  run_main_table.sh  run_main_table_v1.sh  run_main_table_v2.sh  run_main_table_v2_core.sh  run_quick.sh  run_scalability.sh  run_scalability_v1.sh  run_scalability_v2.sh  run_scalability_v2_core.sh  run_v2_core_pipeline.sh
(+2682 files in other folders)
