[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uavtre"
version = "1.0.0"
description = "Reliability-aware multi-UAV routing benchmark framework"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "UAV TR-E Project Team" }
]
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
  "scipy>=1.13",
  "highspy>=1.8",
  "ortools>=9.10",
  "pyvrp>=0.9",
  "matplotlib>=3.9",
  "pytest>=8.3"
]

[project.urls]
Repository = "https://github.com/anonymous/uav_tr_e_project"

[project.scripts]
uavtre-run = "uavtre.cli.run_experiments:main"
uavtre-bench = "uavtre.cli.run_benchmarks:main"
uavtre-pack = "uavtre.cli.make_review_pack:main"
uavtre-freeze = "uavtre.cli.freeze_benchmarks:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]
norecursedirs = ["submission", "outputs", "benchmarks"]
